--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "react",
-  "version": "0.0.0",
+  "name": "react-admin",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "react-scripts": "latest"
   },
   "browserslist": {
     "production": [
